# fraud_detection_sagemaker

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
notebooks/: fraud_detection.py  requirements.txt  sagemaker_arch.ipynb
